infra/k8s/client-api/overlays/stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-api
  namespace: client-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client-api
  template:
    metadata:
      labels:
        app: client-api
    spec:
      containers:
        - name: client-api
          image: ghcr.io/skkuding/codedang-client-api
          resources:
            limits:
              cpu: 1
              memory: 1.5Gi
            requests:
              cpu: 0.2
              memory: 200Mi
