infra/k8s/client-api/overlays/stage/HTTPRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: client-api-server-httproute
  namespace: client-api
spec:
  parentRefs:
  - name: main-gateway
    namespace: kube-system
    sectionName: https-wildcard
  hostnames:
  - stage.codedang.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: cors
    backendRefs:
    - name: client-api-server
      port: 4000
